tests/baselines/reference/parameterDecoratorKey2.errors.txt
tests/cases/compiler/parameterDecoratorKey2.ts(4,15): error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/parameterDecoratorKey2.ts (1 errors) ====
    const decorator = (target: any, key: string, index: number) => {};
    
    class A {
    	constructor(@decorator param1: string) {}
    	             ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'string'.
    	method(@decorator param1: string) {}
    }
    